--- a/style.scss
+++ b/style.scss
@@ -46,6 +46,16 @@ body {
   background-size: cover;
   padding:50px 15px;
 
+
+  @media (min-width: 768px) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-image: url(image/backblack.png);
+    background-size: cover;
+    padding:50px 40px;
+  }
+
   @media (min-width: 992px) {
     display: flex;
     align-items: center;
@@ -113,10 +123,18 @@ body {
     margin: 20px 0 40px 0;
   }
 
+  @media (min-width: 768px) {
+  max-width: 100%;
+
+  padding:50px 40px;
+  }
+
   @media (min-width: 992px) {
     max-width:45%;
     margin: auto; 
   }
+
+
 
   .btn {
     background-color: $primary-color;
@@ -140,6 +158,14 @@ body {
   text-align: left;
   background-color: black;
   color: white;
+
+  @media (min-width: 768px) {
+    display: grid;
+    padding:50px 40px;
+    text-align: left;
+    background-color: black;
+    color: white;
+  }
   
 
   @media (min-width: 992px) {
@@ -150,20 +176,29 @@ body {
     gap:90px;
     padding:50px 150px;
   }
-  
+
+
 
   .image {
-    max-width: 400px;
-    transform: translate(-2rem);
+    max-width: 300px;
+    transform: translate(2rem);
+
+    @media (min-width: 768px) {
+      max-width: 400px;
+      transform: translate(10rem);
+    }
   
 
     @media (min-width: 992px) {
       max-width: 500px;
+      transform: translate(-2rem);
     }
   }
   h3{
     margin: 20px 0;
   }
+  
+
 
   .content{
     max-width: 90%;
@@ -180,6 +215,16 @@ body {
     grid-template-columns: repeat(1,1fr);
     grid-auto-rows:100px;
     gap:10px;
+
+
+    @media (min-width: 768px) {
+      margin-top: 50px;
+      display:grid;
+      grid-template-columns: repeat(2,1fr);
+      grid-auto-rows:100px;
+      gap:20px;
+      text-align: left;
+    }
 
     @media (min-width: 992px) {
       margin-top: 50px;
@@ -251,6 +296,7 @@ body {
 
   .social-icons img {
     width: 40px;
+    margin-top: 5px;
   }
 }
 
@@ -261,6 +307,14 @@ body {
   justify-content:center;
   max-width: 100%;
   padding:50px 15px;
+
+  @media (min-width: 768px) {
+    background-color: $primary-color;
+    flex-direction: row;
+    justify-content:center;
+    max-width: 100%;
+    padding:50px 40px;
+  }
 
   @media (min-width: 992px) {
     justify-content: space-between;
@@ -294,10 +348,26 @@ body {
 }
 .qualifications{
   .qual-item{
-  margin-top: 30px;
+  margin-top: 20px;
   display: flex;
   justify-content: space-between;
   gap:8px;
+
+
+  @media (min-width: 768px) {
+    margin-top: 20px;
+    display: grid;
+   grid-template-columns: repeat(2,1fr);
+    gap:8px;
+  }
+
+
+  @media (min-width: 992px) {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    gap:8px;
+  }
   }
 
   .qual-item1{
@@ -312,7 +382,16 @@ body {
   background-color: $secondary-color;
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding:50px 15px;
+
+  @media (min-width: 768px) {
+    background-color: $secondary-color;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:50px 40px;
+  }
 
   @media (min-width: 992px) {
     justify-content: space-between;
@@ -328,7 +407,11 @@ body {
 
   .skills-section {
     width: 100%;
-  
+
+    @media (min-width: 768px) {
+      width: 100%;
+    }
+
     @media (min-width: 992px) {
       width: 50%;
     }
@@ -353,19 +436,28 @@ body {
     height: 100%;
   }
   .image-section img {
-    max-width: 500px;
-    transform: translate(-11rem);
+    max-width: 300px;
+    align-items: center;
+    // transform: translate(-11rem);
+  
     
     @media (min-width: 992px) {
-      max-width: 550px;
-      transform: translate(-5rem);
+      max-width: 400px;
+      
     }
   }
 }
 
 // Part-6
 .experience {
-    padding:50px 15px;
+    padding:50px 15px; 
+
+    @media (min-width: 768px) {
+      max-width: 100%;
+      text-align: center;
+      align-items: center;
+      padding:50px 40px;
+    }
 
   @media (min-width: 992px) {
     max-width: 100%;
@@ -379,6 +471,12 @@ body {
 
   .experience-container {
     margin-top: 30px;
+
+    @media (min-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 30px;
+      }   
   
 
     @media (min-width: 992px) {
@@ -439,11 +537,18 @@ body {
   }
 }
 
-
 // Part-7
 .portfolio {
   padding:50px 15px;
   background-color: $secondary-color;
+
+
+  @media (min-width: 768px) {
+    background-color: $secondary-color;
+    max-width: 100%;
+    text-align: center;
+    padding:50px 40px;
+  }
 
   @media (min-width: 992px) {
     background-color: $secondary-color;
@@ -464,6 +569,16 @@ body {
     gap: 20px;
     padding: 20px;
     justify-content: center;
+
+
+    @media (min-width: 768px) {
+      margin-top: 30px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px;
+      padding: 20px;
+      justify-content: center;
+      }
 
     @media (min-width: 992px) {
     margin-top: 30px;
@@ -495,6 +610,14 @@ body {
   color: #fff;
   padding: 50px 15px;
   text-align: center;
+
+  @media (min-width: 996px) {
+    background-image: url(image/backblack.png);
+    background-size: cover;
+    color: #fff;
+    padding: 50px 40px;
+    text-align: center;
+  }
 
   @media (min-width: 996px) {
     background-image: url(image/backblack.png);
